--- a/css/ie6.css
+++ b/css/ie6.css
@@ -3,8 +3,7 @@ ol.archive,
 .excerpt,
 #content .search,
 ol.commentlist li.hentry,
-.pingback,
-.trackback,
+.ping,
 #carrington-archives ul,
 #carrington-archives li {
 	border-style:solid;
