--- a/css/ie.css
+++ b/css/ie.css
@@ -21,8 +21,7 @@ ul li,
 .full,
 .entry-content,
 .entry-summary,
-.comment,
-ol.commentlist li.hentry,
+.commentlist .hentry,
 .widget,
 .pagination,
 #content,
