--- a/css/ie6.css
+++ b/css/ie6.css
@@ -2,7 +2,7 @@
 .archive,
 .excerpt,
 .search,
-ol.commentlist li.hentry,
+ol.commentlist li.li-comment,
 .ping,
 #carrington-archives ul,
 #carrington-archives li {
