--- a/css/image.css
+++ b/css/image.css
@@ -30,13 +30,13 @@ a:visited {
 
 #header,
 #footer {
-	background:#51555c url(../img/header-gradient.gif) repeat-x center bottom;
+	background:#51555c url(../img/header/gradient-dark.png) repeat-x center bottom;
 	clear:both;
 }
 
 #header a,
 #footer a {
-	background: url(../img/header-texture.jpg) no-repeat center bottom;
+	background: url(../img/header/texture-dark.png) no-repeat center bottom;
 	border-bottom:1px solid #333;
 	display:block;
 	font-size:11.5px;
