--- a/css/image.css
+++ b/css/image.css
@@ -21,22 +21,17 @@ body {
 	background:#000;
 	color:#ccc;
 }
-
 a,
 a:visited {
 	color:#fff;
 	font-weight:bold;
 }
 
-#header,
-#footer {
-	background:#51555c url(../img/header/gradient-dark.png) repeat-x center bottom;
-	clear:both;
+#gallery-header{
+	background:#51555c;
 }
 
-#header a,
-#footer a {
-	background: url(../img/header/texture-dark.png) no-repeat center bottom;
+#gallery-header a{
 	border-bottom:1px solid #333;
 	display:block;
 	font-size:11.5px;
@@ -45,7 +40,7 @@ a:visited {
 	text-transform:uppercase;
 }
 
-#content {
+#gallery-content {
 	margin:40px auto;
 	position:relative;
 	width:90%;
@@ -55,7 +50,6 @@ a:visited {
 	border:1px solid #0c0c0c;
 }
 .figure-info {
-	background:transparent url(../img/divider-ornament-wide-darker.png) no-repeat scroll center top;
 	margin:20px auto 0;
 	padding:25px 40px;
 	width:33em;
@@ -79,13 +73,10 @@ a:visited {
 
 .previous-attachment,
 .next-attachment {
-	background:url(../img/150px-flourish-left-darker.png) no-repeat right bottom;
-	padding-bottom:13px;
 	position:absolute;
 	top:0px;
 }
 .next-attachment{
-	background:url(../img/150px-flourish-right-darker.png) no-repeat left bottom;
 	right:0;
 }
 
