--- a/css/attachment-light.css
+++ b/css/attachment-light.css
@@ -15,25 +15,14 @@
 // **********************************************************************
 */
 
-body {
+@import url(typography.css);
+
+#gallery-header{
+	background:#e9eaea;
 }
 
-a,
-a:visited {
-	color:#fff;
-	font-weight:bold;
-}
-
-#header,
-#footer {
-	background:#51555c url(../img/header-gradient.gif) repeat-x center bottom;
-	clear:both;
-}
-
-#header a,
-#footer a {
-	background: url(../img/header-texture.jpg) no-repeat center bottom;
-	border-bottom:1px solid #333;
+#gallery-header a{
+	border-bottom:1px solid #cecfd1;
 	display:block;
 	font-size:11.5px;
 	font-weight: normal;
@@ -41,17 +30,16 @@ a:visited {
 	text-transform:uppercase;
 }
 
-#content {
+#gallery-content {
 	margin:40px auto;
 	position:relative;
 	width:90%;
 }
 
 .entry-attachment img {
-	border:1px solid #eee;
+	border:1px solid #cecfd1;
 }
 .figure-info {
-	background:transparent url(../img/divider-ornament-wide.gif) no-repeat scroll center top;
 	margin:20px auto 0;
 	padding:25px 40px;
 	width:33em;
@@ -75,19 +63,16 @@ a:visited {
 
 .previous-attachment,
 .next-attachment {
-	background:url(../img/150px-flourish-left.png) no-repeat right bottom;
-	padding-bottom:13px;
 	position:absolute;
 	top:0px;
 }
 .next-attachment{
-	background:url(../img/150px-flourish-right.png) no-repeat left bottom;
 	right:0;
 }
 
 .previous-attachment a,
 .next-attachment a{
-	border:1px solid #eee;
+	border:1px solid #cecfd1;
 	display:block;
 	width:50px;
 	height:50px;
