--- a/css/attachment.css
+++ b/css/attachment.css
@@ -27,11 +27,11 @@ a:visited {
 	font-weight:bold;
 }
 
-#gallery-header{
+#header{
 	background:#51555c;
 }
 
-#gallery-header a{
+#header a{
 	border-bottom:1px solid #333;
 	display:block;
 	font-size:11.5px;
@@ -40,7 +40,7 @@ a:visited {
 	text-transform:uppercase;
 }
 
-#gallery-content {
+#attachment-content {
 	margin:40px auto;
 	position:relative;
 	width:90%;
