--- a/css/img.css
+++ b/css/img.css
@@ -97,12 +97,12 @@ form.comment-form {
 /* Gallery
 =================================== */
 
-#gallery-header {
+body#attachment #header {
 	background-image:url(../img/header/gradient-dark.png);
 	background-repeat:repeat-x;
 	background-position:center bottom;
 }
-#gallery-header a {
+body#attachment #header .wrapper {
 	background: url(../img/header/texture-dark.png) no-repeat center bottom;
 }
 .figure-info {
