--- a/css/carrington-blog.css
+++ b/css/carrington-blog.css
@@ -88,6 +88,7 @@ h1.page-title {
 	display:block;
 }
 .nav li li a {
+	color: #a00004 !important; /* These need to retain a contrasting color with dropdown background */
 	padding:6px 9px;
 }
 .nav li li {
@@ -247,10 +248,6 @@ h1.page-title {
 #navigation li li a:visited {
 	font-weight:normal;
 	text-transform:none;
-}
-#navigation li li a,
-#navigation li li a:visited {
-	color: #a00004;
 }
 
 #sub-header {
