lighten the About box

--- a/css/carrington-blog.css
+++ b/css/carrington-blog.css
@@ -565,7 +565,7 @@ h2.widget-title,
 	padding-bottom:24px;
 }
 #carrington-about .about{
-	background-color:#cecfd1;
+	background-color:#fff;
 	overflow:hidden;
 	padding:12px;
 }
